# adventofcode2024

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: codspeed.yml  rust-clippy.yml
benches/: codspeed.rs
src/: bench.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day_1.rs  day_2.rs  day_3.rs  lib.rs  main.rs  one.rs  two.rs  utils.rs
src/benches/: codspeed.rs
